Hotfix 1.3.1 merge into master (#653)
* Fixes XML parsing failure due to missing transitive dependency (issue #625).
* increment version to 1.3.1